--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>you & me - Our Forever 💍</title>
+    <title>A Special Surprise 💕</title>
+    
+    <!-- Open Graph Meta Tags for WhatsApp/Social Media Sharing -->
+    <meta property="og:title" content="A Special Surprise 💕">
+    <meta property="og:description" content="I have something important to ask you... Click to find out 💍">
+    <meta property="og:image" content="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExCcijrCfZBuqDzBWp3qSrBEZCqBUfQVz4CWGHWF91iaEw/L1R1TVrJ7FdJ0R6dI3/giphy.gif">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="A Special Surprise 💕">
+    <meta name="twitter:description" content="I have something important to ask you... Click to find out 💍">
+    <meta name="twitter:image" content="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExCcijrCfZBuqDzBWp3qSrBEZCqBUfQVz4CWGHWF91iaEw/L1R1TVrJ7FdJ0R6dI3/giphy.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
