--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
 
         <!-- Scene 2: Memory Lane -->
         <div class="scene-overlay" id="scene-2" data-scroll="10-30">
-            <h2 class="section-title">Our Beautiful Memories</h2>
+            <h2 class="section-title">I am sorry for everything</h2>
             <div class="memory-timeline" id="memory-timeline"></div>
         </div>
 
         <!-- Scene 3: Reasons Why I Love You -->
         <div class="scene-overlay" id="scene-3" data-scroll="30-50">
-            <h2 class="section-title">Why I Love You</h2>
-            <p class="subtitle-text">Click on the hearts to discover</p>
+            <h2 class="section-title">Please maaf krde yr jo bhi hua</h2>
+            <p class="subtitle-text">&#xfe</p>
         </div>
 
         <!-- Scene 4: Our Future Together -->
         <div class="scene-overlay" id="scene-4" data-scroll="50-70">
-            <h2 class="section-title">Our Forever</h2>
-            <p class="subtitle-text">Dreams we'll build together</p>
+            <h2 class="section-title">Give me one more chance </h2>
+            <p class="subtitle-text">Kya tu muje wapas maaf kregi?</p>
         </div>
 
         <!-- Scene 5: The Big Question -->
